test/fail_compilation/fail314.d
struct foo{
  static if (is(int T == int)) {}
  static if (is(int T == int)) {}
}

